# secrecy

./: README.md  generate_code.py  pyproject.toml  requirements.txt  secret_decoder.py  secret_parallel.py  transformer_information.py
secrecy/: .llm_redaction_model_trainer.py.swp  .overfit_secret_dataset_generation.py.swp  .overfit_secret_decoder.py.swp  .secret_dataset_generation.py.swp  compressive_clm_trainer.py  dual_encoder_clm.py  dual_encoder_model.py  dual_encoder_trainer.py  generate_code.py  inversion_dataset_generation.py  llm_inversion_dataset_generation.py  llm_inversion_model_trainer.py  llm_model_evaluator.py  llm_overfit_secret_tag_generation.py  llm_redaction_model_trainer.py  noninvertible_clm.py  noninvertible_clm_trainer.py  overfit_secret_dataset_generation.py  overfit_secret_decoder.py  overfit_secret_tag_generation.py  overfitting_secret_model.py  redaction_model.py  redaction_model_trainer.py  secret_dataset_generation.py  secret_decoder.py  secret_parallel.py  sicilian_sequence.py  split_model_trainer.py  transformer_autoencoder.py
