[project]
name = "secrecy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.13.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "blinker==1.9.0",
    "cachetools==7.1.0",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "cloudpickle==3.1.2",
    "contourpy==1.3.2",
    "cryptography==46.0.7",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.5.3",
    "cuda-toolkit==13.0.2",
    "cycler==0.12.1",
    "databricks-sdk==0.106.0",
    "datasets==4.8.4",
    "dill==0.4.1",
    "docker==7.1.0",
    "dotenv==0.9.9",
    "einops==0.8.2",
    "exceptiongroup==1.3.1",
    "fastapi==0.136.1",
    "filelock==3.29.0",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.49",
    "google-auth==2.50.0",
    "graphene==3.4.3",
    "graphql-core==3.2.8",
    "graphql-relay==3.2.0",
    "greenlet==3.5.0",
    "gunicorn==25.3.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huey==2.6.0",
    "huggingface-hub==1.12.0",
    "idna==3.13",
    "importlib-metadata==8.7.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "mako==1.3.12",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.9",
    "mdurl==0.1.2",
    "mlflow==3.11.1",
    "mlflow-skinny==3.11.1",
    "mlflow-tracing==3.11.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile==1.15.1.6",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand==10.4.0.35",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "nvidia-nvtx-cu12==12.8.90",
    "opentelemetry-api==1.41.1",
    "opentelemetry-proto==1.41.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-semantic-conventions==0.62b1",
    "packaging==26.2",
    "pandas==2.3.3",
    "peft==0.19.1",
    "pillow==12.2.0",
    "prettytable==3.17.0",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "pyarrow==23.0.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "skops==0.14.0",
    "smmap==5.0.3",
    "sqlalchemy==2.0.49",
    "sqlparse==0.5.5",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "tomli==2.4.1",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==5.5.4",
    "triton==3.6.0",
    "trl==1.3.0",
    "typer==0.25.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "wcwidth==0.6.0",
    "werkzeug==3.1.8",
    "xxhash==3.7.0",
    "yarl==1.23.0",
    "zipp==3.23.1",
]
